Bug 245215 - k3b crashing when optical media is loaded into cd/dvd/br drive
Summary: k3b crashing when optical media is loaded into cd/dvd/br drive
Status: RESOLVED FIXED
Alias: None
Product: kdemultimedia
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Multimedia Bugs
URL:
Keywords:
: 253536 255438 262612 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-20 11:56 UTC by John Natschev
Modified: 2012-07-03 20:32 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Natschev 2010-07-20 11:56:44 UTC
Application: k3b (1.92.0)
KDE Platform Version: 4.4.5 (KDE 4.4.5)
Qt Version: 4.6.3
Operating System: Linux 2.6.33.6-147.fc13.x86_64 x86_64
Distribution: "Fedora release 13 (Goddard)"

-- Information about the crash:
i have tried with other media but when i load an audio cd k3b invariably crashes. it seems to be crashing at the analysing medium part. it was doing it constantly. then i changed my settings such that gnome doesn't ask me what to do with the newly loaded media. that seemed to work a few times. then it crashed again.

The crash can be reproduced some of the time.

 -- Backtrace:
Application: K3b (k3b), signal: Segmentation fault
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f6c52d52820 (LWP 26884))]

Thread 2 (Thread 0x7f6c3d96a710 (LWP 27892)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:212
#1  0x0000003b8ae70b15 in thread_sleep (ti=0x7f6c3d969cc0) at thread/qthread_unix.cpp:398
#2  0x0000003b8ae70cc6 in QThread::sleep (secs=<value optimized out>) at thread/qthread_unix.cpp:412
#3  0x0000003b96eabc45 in K3b::MediaCache::PollThread::run (this=0x27ae4c0) at /usr/src/debug/k3b-1.92.0/libk3b/tools/k3bmediacache.cpp:106
#4  0x0000003b8ae711a5 in QThreadPrivate::start (arg=0x27ae4c0) at thread/qthread_unix.cpp:248
#5  0x0000003b83e07761 in start_thread (arg=0x7f6c3d96a710) at pthread_create.c:301
#6  0x0000003b832e14ed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f6c52d52820 (LWP 26884)):
[KCrash Handler]
#5  0x0000003b8a21cec2 in KCDDB::CDDBPLookup::~CDDBPLookup (this=0x3370420, __in_chrg=<value optimized out>) at /usr/src/debug/kdemultimedia-4.4.5/libkcddb/cddbplookup.cpp:38
#6  0x0000003b8a21ea99 in KCDDB::AsyncCDDBPLookup::~AsyncCDDBPLookup (this=0x3370420, __in_chrg=<value optimized out>) at /usr/src/debug/kdemultimedia-4.4.5/libkcddb/asynccddbplookup.cpp:38
#7  0x0000003b8a21abe7 in qDeleteAll<QList<KCDDB::Lookup*>::const_iterator> (this=0x31ff600, r=<value optimized out>) at /usr/include/QtCore/qalgorithms.h:322
#8  qDeleteAll<QList<KCDDB::Lookup*> > (this=0x31ff600, r=<value optimized out>) at /usr/include/QtCore/qalgorithms.h:330
#9  KCDDB::Client::slotFinished (this=0x31ff600, r=<value optimized out>) at /usr/src/debug/kdemultimedia-4.4.5/libkcddb/client.cpp:246
#10 0x0000003b8a21adeb in KCDDB::Client::qt_metacall (this=0x31ff600, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8ffca290)
    at /usr/src/debug/kdemultimedia-4.4.5/x86_64-redhat-linux-gnu/libkcddb/client.moc:79
#11 0x0000003b8af66a36 in QMetaObject::activate (sender=0x2f832d8, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8ffca290) at kernel/qobject.cpp:3295
#12 0x0000003b8a211602 in KCDDB::AsyncMusicBrainzLookup::finished (this=<value optimized out>, _t1=KCDDB::Success)
    at /usr/src/debug/kdemultimedia-4.4.5/x86_64-redhat-linux-gnu/libkcddb/asyncmusicbrainzlookup.moc:89
#13 0x0000003b8a211926 in KCDDB::AsyncMusicBrainzLookup::lookupFinished (this=0x2f832b0) at /usr/src/debug/kdemultimedia-4.4.5/libkcddb/musicbrainz/asyncmusicbrainzlookup.cpp:75
#14 0x0000003b8a211b61 in KCDDB::AsyncMusicBrainzLookup::qt_metacall (this=0x2f832b0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7f6c34005b70)
    at /usr/src/debug/kdemultimedia-4.4.5/x86_64-redhat-linux-gnu/libkcddb/asyncmusicbrainzlookup.moc:77
#15 0x0000003b8af62f31 in QObject::event (this=0x2f832d8, e=0x7f6c34002cc0) at kernel/qobject.cpp:1248
#16 0x0000003b8c3ab39c in QApplicationPrivate::notify_helper (this=0x23a4670, receiver=0x2f832d8, e=0x7f6c34002cc0) at kernel/qapplication.cpp:4306
#17 0x0000003b8c3b165b in QApplication::notify (this=<value optimized out>, receiver=0x2f832d8, e=0x7f6c34002cc0) at kernel/qapplication.cpp:4189
#18 0x0000003b95807016 in KApplication::notify (this=0x7fff8ffcad90, receiver=0x2f832d8, event=0x7f6c34002cc0) at /usr/src/debug/kdelibs-4.4.5/kdeui/kernel/kapplication.cpp:302
#19 0x0000003b8af53ddc in QCoreApplication::notifyInternal (this=0x7fff8ffcad90, receiver=0x2f832d8, event=0x7f6c34002cc0) at kernel/qcoreapplication.cpp:726
#20 0x0000003b8af55ed4 in sendEvent (receiver=0x0, event_type=0, data=0x2379370) at kernel/qcoreapplication.h:215
#21 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x2379370) at kernel/qcoreapplication.cpp:1367
#22 0x0000003b8af79d23 in sendPostedEvents (s=<value optimized out>) at kernel/qcoreapplication.h:220
#23 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:276
#24 0x0000003b84e3bd02 in g_main_dispatch (context=0x23aa520) at gmain.c:1960
#25 IA__g_main_context_dispatch (context=0x23aa520) at gmain.c:2513
#26 0x0000003b84e3fae8 in g_main_context_iterate (context=0x23aa520, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2591
#27 0x0000003b84e3fc9c in IA__g_main_context_iteration (context=0x23aa520, may_block=1) at gmain.c:2654
#28 0x0000003b8af79863 in QEventDispatcherGlib::processEvents (this=0x2378a60, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#29 0x0000003b8c44a84e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#30 0x0000003b8af52822 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#31 0x0000003b8af52aec in QEventLoop::exec (this=0x7fff8ffcace0, flags=...) at kernel/qeventloop.cpp:201
#32 0x0000003b8af561bb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#33 0x0000000000516854 in main (argc=1, argv=0x7fff8ffcb968) at /usr/src/debug/k3b-1.92.0/src/main.cpp:151

Reported using DrKonqi
Comment 1 Michał Małek 2010-09-11 21:12:55 UTC
This is KCDDB library issue
Comment 2 John Natschev 2010-09-12 12:48:52 UTC
thanks for the e-mail.

I sort of worked it out on my own. I configured K3b to stop using
MusicBrainz. Unfortunate but it works. Will this be resolved?


Cheers,
John Natschev

On Sat, 2010-09-11 at 21:12 +0200, Michał Małek wrote:
> https://bugs.kde.org/show_bug.cgi?id=245215
> 
> 
> Michał Małek <michalm@jabster.pl> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                  CC|                            |michalm@jabster.pl
>           Component|general                     |general
>             Version|1.92.0                      |unspecified
>          AssignedTo|michalm@jabster.pl          |kde-multimedia@kde.org
>             Product|k3b                         |kdemultimedia
> 
> 
> 
> 
> --- Comment #1 from Michał Małek <michalm jabster pl>  2010-09-11 21:12:55 ---
> This is KCDDB library issue
>
Comment 3 Christoph Feck 2010-10-12 03:55:08 UTC
*** Bug 253536 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2010-10-28 01:27:50 UTC
*** Bug 255438 has been marked as a duplicate of this bug. ***
Comment 5 Harald Sitter 2011-08-14 22:47:31 UTC
SVN commit 1247195 by sitter:

initialize socket_ to 0 and check it before delete... in an async implementation the socket will not be created before lookup is called, so if the object is deleted before the function is called everything goes kaput

BUG: 245215


 M  +2 -0      cddbplookup.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1247195
Comment 6 Jekyll Wu 2012-07-03 20:32:52 UTC
*** Bug 262612 has been marked as a duplicate of this bug. ***