initialize socket_ to 0 and check it before delete... in an async implementation the socket will not be created before lookup is called, so if the object is deleted before the function is called everything goes kaput

BUG: 245215

svn path=/trunk/KDE/kdemultimedia/libkcddb/; revision=1247195